@@ -41,7 +41,8 @@
 </div>
 
 <?php $this->widget('GridView', array(
-    'ajaxUpdate' => false,
+    'id'           => 'entries',
+    'ajaxUpdate'   => false,
     'dataProvider' => $model->search(),
     'cssFile'      => false,
 	'columns'      => array(
