@@ -8,6 +8,7 @@ Version 0.6.0 (unreleased)
 - Issue #56: Added `returnUrl`-param to `entry/update` and `tag/update`
 - Issue #52: Entry name on `entry/index` is a link now
 - Issue #51: Added default order for `entry/index` and `tag/index`
+- Issue #47: Added copy actions to `entry/index`
 - Issue #46: Added support for alternate database host port
 - Issue #36: Added `remember me` functionallity
 - Issue #22: Added double check password when create admin user
